# azerbaijan-jobs-analysis

./: .gitignore  README.md  pyproject.toml  scraper.py
notebooks/: 01_eda.ipynb  02_cleaning.ipynb  03_extraction.ipynb  04_evaluation.ipynb
scraper/: scraper.py
src/jobanalysis/: clean.py  export.py  extract.py  io.py  paths.py
