[project]
name = "azerbaijanjobsanalysis"
version = "0.1.0"
description = "Analysis of job market in Azerbaijan"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ipykernel>=7.2.0",
    "pandas>=3.0.3",
    "poethepoet>=0.45.0",
    "requests>=2.33.1",
    "ruff>=0.15.12",
    "urllib3>=2.6.3",
]


[tool.poe.tasks]
lint = "uv run ruff check --fix"
format = "uv run ruff format"
precommit = ["lint", "format"]
scrape = "uv run scraper/scraper.py"
clean = "uv run src/jobanalysis/clean.py"
extract = "uv run src/jobanalysis/extract.py"

[tool.setuptools.packages.find]
where = ["src"]
